<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity"
    android:background="@android:color/white"
    android:padding="15dp">

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close_black_24dp"
        />

    //IMAGE SETTING
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_picture_card"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:cardCornerRadius="64dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/picture_circle"
            android:layout_gravity="center"
            android:translationZ="10dp"
            android:src="@drawable/ic_photo_camera_black_24dp"


             />
    </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/surname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__surname"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/add_picture_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/add_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="textPersonName"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/surname_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/add_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="textPersonName"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__phone"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/add_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/add_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="phone"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__email"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/add_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="textEmailAddress"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/add_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:padding="8dp"
        android:textSize="24sp"
        android:textColor="#3782FF"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="5dp"
        />
</android.support.constraint.ConstraintLayout>