<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactViewer"
    android:background="@android:color/white"
    android:padding="15dp">

    <Button
        android:id="@+id/more_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_more_vert_black_32dp"

        />

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view_picture_card"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:cardCornerRadius="64dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/view_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/picture_circle"
            android:layout_gravity="center"
            android:translationZ="10dp"
            android:src="@drawable/ic_photo_camera_black_24dp"
            />

    </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/surname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__surname"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/view_picture_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/view_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/surname_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__name"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/view_surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__phone"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/view_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_row__email"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/view_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-light"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_email"
        android:padding="10dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/view_call"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_phone_in_talk_black_24dp"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/view_sms"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_sms_black_24dp"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:id="@+id/view_sendmail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_mail_outline_black_24dp"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:id="@+id/view_share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/ic_share_black_24dp"
            android:layout_margin="10dp"
            />

    </LinearLayout>


    <Button
        android:id="@+id/view_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_close_black_24dp"
        android:backgroundTint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>