<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity"
    android:id="@+id/constraint_Layout">

    <!--Toolbar Layout-->
    <LinearLayout
        android:id="@+id/toolbar_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <!--App Title-->
        <TextView
            android:id="@+id/contacts_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_weight="8"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"/>

        <ImageView
            android:id="@+id/searchbutton"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/ic_search_black_24dp"
            />

        <!--Add Button-->
        <ImageView
            android:id="@+id/add_button"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/activity_main__icon_add"
            android:padding="15dp"
            android:src="@drawable/ic_add_24dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="8"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="@id/constraint_Layout"
        android:background="@android:color/white"
        android:visibility="gone"
        >

        <android.support.v7.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/search_shape"
            />

    </LinearLayout>

    <!--My Account Layout Bar-->
    <LinearLayout
        android:id="@+id/account_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@id/toolbar_Layout"
        app:layout_constraintStart_toStartOf="@id/constraint_Layout"
        app:layout_constraintEnd_toEndOf="@id/constraint_Layout"
        android:orientation="horizontal"
        >

        <android.support.v7.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_picture_card"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="128dp"
            app:cardPreventCornerOverlap="false"
            android:elevation="10dp"
            android:layout_marginStart="22dp"
            android:layout_gravity="center"
            >

            <ImageButton
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_grey_24dp"
                />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:weightSum="10"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:fontFamily="sans-serif-medium"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:src="@drawable/ic_more_vert_black_32dp"
            android:contentDescription="@string/activity_main__icon_menu" />

    </LinearLayout>
    <!--End My Account Layout Bar-->

    <View
        android:id="@+id/line_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/account_Bar"
        app:layout_constraintStart_toStartOf="@id/constraint_Layout"
        app:layout_constraintEnd_toEndOf="@id/constraint_Layout"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/contacts_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/constraint_Layout"
        app:layout_constraintStart_toStartOf="@id/constraint_Layout"
        app:layout_constraintTop_toBottomOf="@+id/line_separator">


    </android.support.v7.widget.RecyclerView>





</android.support.constraint.ConstraintLayout>